--- a/index.html
+++ b/index.html
@@ -138,9 +138,7 @@
     </form>
     <h1>Press the button to restart</h1>
     <button type="button">Refresh</button>
-    <div id="timer">
-      <p></p>
-    </div>
+    <div id="timer"></div>
     <button type="button" id="show">pls don't push</button>
     <div id="content">
       <!-- <div class="col">
